# ttp-monitor

./: .env.example  README.md  pyproject.toml
ttp_monitor/: __main__.py  cli.py  ttp.py  watcher.py  webhook.py  worker.py
